Added Database Model

--- a/CCCodePoint/CCCodePoint.csproj
+++ b/CCCodePoint/CCCodePoint.csproj
@@ -33,10 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -48,6 +48,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,8 +57,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodePoint.cs" />
+    <Compile Include="countylist.cs" />
+    <Compile Include="cpcounty.cs" />
+    <Compile Include="cpdistrict.cs" />
+    <Compile Include="cpdistrictward.cs" />
+    <Compile Include="cpnhspansha.cs" />
+    <Compile Include="cpnhssha.cs" />
+    <Compile Include="cppostcode.cs" />
+    <Compile Include="district.cs" />
+    <Compile Include="nhspansha.cs" />
+    <Compile Include="nhssha.cs" />
+    <Compile Include="postcode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ward.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
