--- a/CCCodePoint/App.config
+++ b/CCCodePoint/App.config
@@ -24,4 +24,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="CodePoint" connectionString="server=localhost;user id=CCMaster;password=LjJVW7muBHoEd4;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="CodePoint" connectionString="server=localhost;user id=CCMaster;password=LjJVW7muBHoEd4;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient" />
+    <add name="ccbhlc" connectionString="server=localhost;user id=ccbhlc;password=yssMwh8M36i;persistsecurityinfo=True;database=ccbhlc" providerName="MySql.Data.MySqlClient" />
+    <add name="cccrow" connectionString="server=localhost;user id=cccrow;password=yssMwh8M56i;persistsecurityinfo=True;database=cccrow" providerName="MySql.Data.MySqlClient" />
+    <add name="ccsydn" connectionString="server=localhost;user id=ccsydn;password=yssMwh8M46i;persistsecurityinfo=True;database=ccsydn" providerName="MySql.Data.MySqlClient" />
+    <add name="CommunityCounts" connectionString="server=localhost;user id=CCMaster;password=LjJVW7muBHoEd4;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+</configuration>
