MySQL password for CodePoint amended to production value

--- a/CCCodePoint/CCCodePoint.csproj
+++ b/CCCodePoint/CCCodePoint.csproj
@@ -60,7 +60,7 @@
     <ManifestKeyFile>CCCodePoint_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>false</GenerateManifests>
+    <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>true</SignManifests>
@@ -120,7 +120,9 @@
     <Compile Include="updateCodePoint.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="CCCodePoint_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
