--- a/CCCodePoint/App.config
+++ b/CCCodePoint/App.config
@@ -1,35 +1,35 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+      <remove invariant="MySql.Data.MySqlClient"/>
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
     </DbProviderFactories>
   </system.data>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v12.0" />
+        <parameter value="v12.0"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CodePoint" connectionString="server=localhost;user id=CCMaster;password=yssMwh8M{6i;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient" />
-    <add name="ccbhlc" connectionString="server=localhost;user id=ccbhlc;password=yssMwh8M36i;persistsecurityinfo=True;database=ccbhlc" providerName="MySql.Data.MySqlClient" />
-    <add name="cccrow" connectionString="server=localhost;user id=cccrow;password=yssMwh8M56i;persistsecurityinfo=True;database=cccrow" providerName="MySql.Data.MySqlClient" />
-    <add name="ccsydn" connectionString="server=localhost;user id=ccsydn;password=yssMwh8M46i;persistsecurityinfo=True;database=ccsydn" providerName="MySql.Data.MySqlClient" />
-    <add name="ccmaster" connectionString="server=localhost;user id=CCMaster;password=yssMwh8M{6i;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient" />
-    <add name="CommunityCounts" connectionString="server=localhost;user id=CCMaster;password=LjJVW7muBHoEd4;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient" />
+    <add name="CodePoint" connectionString="server=localhost;user id=CCMaster;password=yssMwh8M{6i;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient"/>
+    <add name="ccbhlc" connectionString="server=localhost;user id=ccbhlc;password=yssMwh8M36i;persistsecurityinfo=True;database=ccbhlc" providerName="MySql.Data.MySqlClient"/>
+    <add name="cccrow" connectionString="server=localhost;user id=cccrow;password=yssMwh8M56i;persistsecurityinfo=True;database=cccrow" providerName="MySql.Data.MySqlClient"/>
+    <add name="ccsydn" connectionString="server=localhost;user id=ccsydn;password=yssMwh8M46i;persistsecurityinfo=True;database=ccsydn" providerName="MySql.Data.MySqlClient"/>
+    <add name="ccmaster" connectionString="server=localhost;user id=CCMaster;password=yssMwh8M{6i;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient"/>
+    <add name="CommunityCounts" connectionString="server=localhost;user id=CCMaster;password=LjJVW7muBHoEd4;persistsecurityinfo=True;database=ccmaster" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
 </configuration>
